refactor: fix jo/recruiter swagger, clean code